--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -982,6 +982,10 @@ body {
 		&.ui-draggable-dragging {
 			border:1px solid #007bb7;
 			z-index: 100;
+
+			.infobar {
+				cursor:move !important;
+			}
 		}
 
 		&.selected {
