topic header fix

--- a/skins/clarity/styles/design.common.less
+++ b/skins/clarity/styles/design.common.less
@@ -91,6 +91,14 @@ body {
 				background-color: #084978;
 			}
 		}
+
+		.topicname {
+			font-size:110%;
+			padding:2px 4px;
+			border:1px dotted transparent;
+			min-width: 200px;
+			max-height: 100%;
+		}
 	}
 
 }
