--- a/skins/clarity/styles/design.desktop.less
+++ b/skins/clarity/styles/design.desktop.less
@@ -449,7 +449,8 @@ body {
 		}
 
 		min-height: 28px;
-		border-right:1px solid;
+		border-right-width:1px;
+		border-right-style:solid;
 		position: relative;
 
 
@@ -460,11 +461,6 @@ body {
 		}
 
 		.topicname {
-			font-size:110%;
-			padding:2px 4px;
-			border:1px dotted transparent;
-			min-width: 200px;
-			max-height: 100%;
 			margin-left:2px;
 			margin-right:53px;
 
