mobile: login form, user details

--- a/skins/clarity/styles/design.mobile.less
+++ b/skins/clarity/styles/design.mobile.less
@@ -101,3 +101,19 @@ body {
 .tag {
 	padding:6px 8px;
 }
+
+.unit-page {
+	padding:20px;
+
+	label {
+		display:block;
+		margin-bottom:20px;
+		font-size: 150%;
+	}
+
+	input[type="text"], input[type="password"] {
+		font-size:150%;
+		padding:6px 8px;
+		display:block;
+	}
+}
