--- a/skins/clarity/styles/design.mobile.less
+++ b/skins/clarity/styles/design.mobile.less
@@ -46,6 +46,12 @@ body {
 			height: 44px;
 			vertical-align: middle;
 		}
+
+		.display-name {
+			padding-right:20px;
+			line-height:48px;
+			font-size:150%;
+		}
 	}
 
 	.content-wrap {
@@ -115,5 +121,12 @@ body {
 		font-size:150%;
 		padding:6px 8px;
 		display:block;
+	}
+
+	input[type="button"], input[type="submit"] {
+		display:block;
+		font-size:150%;
+		padding:6px 8px;
+		width:100%;
 	}
 }
