--- a/polymer/components/node-base/node-base.html
+++ b/polymer/components/node-base/node-base.html
@@ -4,14 +4,18 @@
 		<style>
 			:host {
 				background-color: #fff;
-				padding: 10px;
+				padding: 15px;
 				margin-bottom:15px;
 				display: block;
+				border-radius: 3px;
+				box-shadow: 0 3px 0 #ddd;
 			}
 		</style>
 
 	</template>
 	<script>
-		Polymer()
+		Polymer({
+
+		})
 	</script>
 </polymer-element>
