Polymer version tags

--- a/polymer/components/node-base/node-base.html
+++ b/polymer/components/node-base/node-base.html
@@ -3,19 +3,12 @@
 
 		<style>
 			:host {
-				background-color: #fff;
-				padding: 15px;
-				margin-bottom:15px;
-				display: block;
-				border-radius: 3px;
-				box-shadow: 0 3px 0 #ddd;
+				display:block;
 			}
 		</style>
 
 	</template>
 	<script>
-		Polymer({
-
-		})
+		Polymer()
 	</script>
 </polymer-element>
