--- a/polymer/components/widget-frame/widget-frame.html
+++ b/polymer/components/widget-frame/widget-frame.html
@@ -1,4 +1,4 @@
-<polymer-element name="widget-frame" vertical layout flex noscript>
+<polymer-element name="widget-frame" vertical layout flex>
 
 	<template>
 
@@ -15,7 +15,7 @@
 		</style>
 
 		<header>
-			<img class="logo" src="../../../stock/images/tinng_logo_light.png">
+			<!--<img class="logo" src="../../../stock/images/tinng_logo_light.png">-->
 			<content select="control-panel"></content>
 		</header>
 
@@ -27,5 +27,11 @@
 
 		</footer>
 	</template>
+
+	<script>
+		Polymer({
+
+		})
+	</script>
 
 </polymer-element>
